--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/snake.css">
     <script src="js/pruebas.js"></script>
+    <script src="js/Chronometer.js"></script>
+    <script src="js/Food.js"></script>
+    <script src="js/Snake.js"></script>
+    <script src="js/SnakeGame.js"></script>
+    <script src="js/main.js"></script>
     <title>Snake</title>
 </head>
 <body>
+    <noscript>
+        <h1>Ésta página requiere el uso de JavaScript para su correcto funcionamiento</h1>
+    </noscript>
     <div class="game">
         <div class="info">
             <div class="score_info">
