--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <noscript>
         <h1>Ésta página requiere el uso de JavaScript para su correcto funcionamiento</h1>
     </noscript>
-    <div class="initial_message">
+    <!-- <div class="initial_message">
         <div>Bienvenido/a al juego de Snake, sólo los más audaces serán capaces de alcanzar la victoria</div>
         <button id="start">Start!</button>
-    </div>
+    </div> -->
     <div class="game">
         <div class="info">
             <div class="score_info">
